crates/zizmor/tests/integration/snapshots/integration__snapshot__template_injection-13.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"template-injection/issue-883-repro/action.yml\")).run()?"
---
help[template-injection]: code injection via template expansion
  --> @@INPUT@@:48:53
   |
34 |       uses: jannekem/run-python-script-action@bbfca66c612a28f3eeca0ae40e1f810265e2ea68 # v1.7
   |       -------------------------------------------------------------------------------- action accepts arbitrary code
...
39 |         script: |
   |         ------ via this input
...
48 |           chango_instance = get_chango_instance(${{ inputs.pyproject-toml }})
   |                                                     ^^^^^^^^^^^^^^^^^^^^^ may expand into attacker-controllable code
   |
   = note: audit confidence → Low

help[template-injection]: code injection via template expansion
  --> @@INPUT@@:56:26
   |
34 |       uses: jannekem/run-python-script-action@bbfca66c612a28f3eeca0ae40e1f810265e2ea68 # v1.7
   |       -------------------------------------------------------------------------------- action accepts arbitrary code
...
39 |         script: |
   |         ------ via this input
...
56 |               ${{ toJson(env.CUSTOM_OUTPUT) }}
   |                          ^^^^^^^^^^^^^^^^^ may expand into attacker-controllable code
   |
   = note: audit confidence → High

help[template-injection]: code injection via template expansion
  --> @@INPUT@@:57:29
   |
34 |       uses: jannekem/run-python-script-action@bbfca66c612a28f3eeca0ae40e1f810265e2ea68 # v1.7
   |       -------------------------------------------------------------------------------- action accepts arbitrary code
...
39 |         script: |
   |         ------ via this input
...
57 |               or ${{ toJson(env.DEFAULT_OUTPUT) }}
   |                             ^^^^^^^^^^^^^^^^^^ may expand into attacker-controllable code
   |
   = note: audit confidence → High

help[template-injection]: code injection via template expansion
  --> @@INPUT@@:60:19
   |
34 |       uses: jannekem/run-python-script-action@bbfca66c612a28f3eeca0ae40e1f810265e2ea68 # v1.7
   |       -------------------------------------------------------------------------------- action accepts arbitrary code
...
39 |         script: |
   |         ------ via this input
...
60 |               ${{ inputs.data }}
   |                   ^^^^^^^^^^^ may expand into attacker-controllable code
   |
   = note: audit confidence → Low

error[template-injection]: code injection via template expansion
  --> @@INPUT@@:65:32
   |
34 |       uses: jannekem/run-python-script-action@bbfca66c612a28f3eeca0ae40e1f810265e2ea68 # v1.7
   |       -------------------------------------------------------------------------------- action accepts arbitrary code
...
39 |         script: |
   |         ------ via this input
...
65 |               event=${{ toJson(github.event) }},
   |                                ^^^^^^^^^^^^ may expand into attacker-controllable code
   |
   = note: audit confidence → High

help[template-injection]: code injection via template expansion
   --> @@INPUT@@:110:33
    |
104 |       uses: jannekem/run-python-script-action@bbfca66c612a28f3eeca0ae40e1f810265e2ea68 # v1.7
    |       -------------------------------------------------------------------------------- action accepts arbitrary code
105 |       with:
106 |         script: |
    |         ------ via this input
...
110 |           file_path = Path("${{ env.CHANGE_NOTE_PATH }}")
    |                                 ^^^^^^^^^^^^^^^^^^^^ may expand into attacker-controllable code
    |
    = note: audit confidence → High

help[template-injection]: code injection via template expansion
   --> @@INPUT@@:111:34
    |
104 |       uses: jannekem/run-python-script-action@bbfca66c612a28f3eeca0ae40e1f810265e2ea68 # v1.7
    |       -------------------------------------------------------------------------------- action accepts arbitrary code
105 |       with:
106 |         script: |
    |         ------ via this input
...
111 |           encoded_content = "${{ env.CHANGE_NOTE_CONTENT }}"
    |                                  ^^^^^^^^^^^^^^^^^^^^^^^ may expand into attacker-controllable code
    |
    = note: audit confidence → High

14 findings (7 suppressed): 0 informational, 6 low, 0 medium, 1 high
